increased width of encounters-container in order to prevent text overlap in encounters label

--- a/frontend/src/features/TrackingPage/TrackingPage.module.css
+++ b/frontend/src/features/TrackingPage/TrackingPage.module.css
@@ -102,6 +102,7 @@
 @media only screen and (max-width: 600px) {
     .encounters-layout{
         flex-direction:column-reverse;
+        width: 95%;
     }
     
     .controls-container{
